Feature/batch ms (#2)
* add multiple datasource

* save in pg, mongo, elastic

* fix writers (add scpiids to mongo and elastic)

* add helm chart & Jenkinsfile

---------

Co-authored-by: AitAhmedNasser <aitahmednasser@outlook.com>
Co-authored-by: Ouali Abdiche <oualiabdiche@outlook.fr>